fix/z-index

--- a/src/blocks/header/__scroll/header__scroll.css
+++ b/src/blocks/header/__scroll/header__scroll.css
@@ -1,7 +1,7 @@
 .header__scroll {
 	position: fixed;
 	top: -100%;
-	z-index: 2;
+	z-index: 3;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
